# rust-graphql-server

./: .dockerignore  .env  .gitignore  .ignore  Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  rustfmt.toml  rustup-toolchain.toml  schema.gql  sqlx-data.json
migrations/: 20210218045130_create_users_table.sql  20210228214243_create_database.up.sql
src/: auth.rs  config.rs  context.rs  db.rs  executor.rs  main.rs  models.rs  schema.rs  state.rs
