[package]
name = "amble"
version = "0.1.0"
authors = ["Jake Ploskey <jake@boxed.email>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.42"
bcrypt = "0.9.0"
chrono = "0.4.19"
clap = "2.33.3"
dataloader = "0.14.0"
dotenv = "0.15.0"
hmac = "0.10.1"
juniper = "0.15.3"
jwt = "0.13.0"
lazy_static = "1.4.0"
lettre = { version = "0.10.0-beta.1", features = ["async-std1"] }
rand = "0.8.3"
redis = { version = "0.20.0", features = ["aio", "async-std-comp", "connection-manager"] }
serde = "1.0.123"
sha2 = "0.9.3"
sqlx = { version = "0.5.1", features = ["runtime-async-std-native-tls", "postgres", "macros", "uuid", "chrono", "offline"] }
tide = "0.16.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
